crates/mlcg_builtin_macros/tests/ui/fail_blank_receiver_name.stderr
error: instruction `bad` has blank receiver parameter name
 --> tests/ui/fail_blank_receiver_name.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/blank_receiver_name_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
